Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65516

[REG] 'UIApplicationWillChangeStatusBarFrameNotification' is unavailable: not available on tvOS

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.9.4, 5.10.1
    • 5.10.1
    • QPA
    • None
    • tvOS (clang-multi) on macOS 10.12 (clang-x86_64) - DebugAndRelease, DisableTests, AbortTestingOnFirstFailure
    • macOS
    • 175d691fa377d43fbc18d52d116135e0bf76a5f4

    Description

      https://codereview.qt-project.org/#/c/215044/ Update submodules on '5.10' in qt5
      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1514802177
      https://testresults.qt.io/logs/qt/qtbase/f28a47aebb2f08e221fe7bffafce62a0a96cf7fd/MacOSMacOS_10_12x86_64TvOSTvOS_ANYmultiClangqtci-macos-10.12-x86_64-8-e7a8abDebugAndRelease_DisableTests/2a48a3b7dcb9652b1532a3ad14de7580b5b9b1ee/build_1514802251/log.txt.gz

      /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ -c -pipe -stdlib=libc++ -O2 -fPIC -std=c++1z  -arch arm64  -arch x86_64 -Xarch_arm64 -mappletvos-version-min=10.0 -Xarch_arm64 -isysroot/Applications/Xcode.app/Contents/Developer/Platforms/AppleTVOS.platform/Developer/SDKs/AppleTVOS10.2.sdk -Xarch_x86_64 -mtvos-simulator-version-min=10.0 -Xarch_x86_64 -isysroot/Applications/Xcode.app/Contents/Developer/Platforms/AppleTVSimulator.platform/Developer/SDKs/AppleTVSimulator10.2.sdk -fobjc-nonfragile-abi -fobjc-legacy-dispatch -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -fembed-bitcode -Wall -W -fPIC -DQT_COMPILER_SUPPORTS_SSE2 -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_STATICPLUGIN -DQT_PLUGIN -DQT_FONTDATABASE_SUPPORT_LIB -DQT_GRAPHICS_SUPPORT_LIB -DQT_CLIPBOARD_SUPPORT_LIB -DQT_GUI_LIB -DQT_CORE_LIB -I. -I../../../../mkspecs/common/uikit -I../../../../include -I../../../../include/QtFontDatabaseSupport -I../../../../include/QtFontDatabaseSupport/5.10.1 -I../../../../include/QtFontDatabaseSupport/5.10.1/QtFontDatabaseSupport -I../../../../include/QtGraphicsSupport -I../../../../include/QtGraphicsSupport/5.10.1 -I../../../../include/QtGraphicsSupport/5.10.1/QtGraphicsSupport -I../../../../include/QtGui/5.10.1 -I../../../../include/QtGui/5.10.1/QtGui -I../../../../include/QtClipboardSupport -I../../../../include/QtClipboardSupport/5.10.1 -I../../../../include/QtClipboardSupport/5.10.1/QtClipboardSupport -I../../../../include/QtGui -I../../../../include/QtCore/5.10.1 -I../../../../include/QtCore/5.10.1/QtCore -I../../../../include/QtCore -I.moc/release -I../../../../mkspecs/macx-tvos-clang -o .obj/release/qiosservices.o qiosservices.mm
      quiview.mm:67:66: error: 'UIApplicationWillChangeStatusBarFrameNotification' is unavailable: not available on tvOS
              [[NSNotificationCenter defaultCenter] addObserverForName:UIApplicationWillChangeStatusBarFrameNotification
                                                                       ^
      /Applications/Xcode.app/Contents/Developer/Platforms/AppleTVOS.platform/Developer/SDKs/AppleTVOS10.2.sdk/System/Library/Frameworks/UIKit.framework/Headers/UIApplication.h:481:39: note: 'UIApplicationWillChangeStatusBarFrameNotification' has been explicitly marked unavailable here
      UIKIT_EXTERN NSNotificationName const UIApplicationWillChangeStatusBarFrameNotification __TVOS_PROHIBITED;       // userInfo contains NSValue with new frame
                                            ^
      1 error generated.
      make[6]: *** [.obj/debug/quiview.o] Error 1
      make[5]: *** [debug-all] Error 2
      make[5]: *** Waiting for unfinished jobs....
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jakepetroules Jake Petroules (DO NOT ASSIGN ISSUES)
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes