Fix the iOS/tvOS platform plugin build on tvOS

This fixes a regression from ba44cdae38406c429c7fb43863a6883bd0f79cf5.

Task-number: QTBUG-65516
Change-Id: I989b075d3f96170660042349437e4a6a4a115cf9
Reviewed-by: Liang Qi <liang.qi@qt.io>