src/plugins/platforms/ios/quiview.mm
@@ -58,6 +58,7 @@
 
 + (void)load
 {
+#ifndef Q_OS_TVOS
     if (QOperatingSystemVersion::current() < QOperatingSystemVersion(QOperatingSystemVersion::IOS, 11)) {
         // iOS 11 handles this though [UIView safeAreaInsetsDidChange], but there's no signal for
         // the corresponding top and bottom layout guides that we use on earlier versions. Note
@@ -72,6 +73,7 @@
             }
         ];
     }
+#endif
 }
 
 + (Class)layerClass
